<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="added_favorite">Added to Favorites</string>
    <string name="app_name">FileManager</string>
    <string name="cancel">Cancel</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_music">Music</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pics</string>
    <string name="category_theme">Themes</string>
    <string name="category_video">Videos</string>
    <string name="category_zip">Zips</string>
    <string name="confirm">OK</string>
    <string name="confirm_know">OK</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="error_info_cant_send_folder">Unable to send the folder</string>
    <string name="fail_to_create_folder">Failed to create the folder, the folder already exists</string>
    <string name="fail_to_rename">Failed to rename the file or folder as it already exists</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_size">%d Bytes</string>
    <string name="install_failed">Installation failed</string>
    <string name="install_successful">Installation successful</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_creat_new_folder">NewFolder</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_date">Time (new - old)</string>
    <string name="menu_item_sort_name">Name (A - Z)</string>
    <string name="menu_item_sort_size">Size (small - big)</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="new_folder_name">New folder</string>
    <string name="no">No</string>
    <string name="no_file">No files</string>
    <string name="no_wifi_hint">No Wi-Fi network, press to check WiFi settings</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_cancel_selectall">Deselect All</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_copy_path">Copy file path</string>
    <string name="operation_create_folder">New folder</string>
    <string name="operation_create_folder_message">Enter folder name</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_favorite">Add to Favorites</string>
    <string name="operation_hide_sys">Hide hidden files</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_send">Send</string>
    <string name="operation_show_sys">Show hidden files</string>
    <string name="operation_unfavorite">Remove from Favorites</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="sd_card_available">Space available:<xliff:g id="available_size">%1$s</xliff:g></string>
    <string name="sd_card_size">SD card:<xliff:g id="total_size">%1$s</xliff:g></string>
    <string name="sd_folder">SD card</string>
    <string name="search_hint">Search Files</string>
    <string name="search_title">Search Files</string>
    <string name="tab_category">FileManager</string>
    <string name="tab_sd">File</string>
    <string name="yes">Yes</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="favorite_photo">Photo</string>
    <string name="favorite_sdcard">SD Card</string>
    <string name="favorite_root">Root</string>
    <string name="favorite_screen_cap">MIUI Screen Shot</string>
    <string name="favorite_ringtone">Ringtone</string>
    <string name="menu_setting">Preferences</string>
    <string name="menu_exit">Exit</string>
    <string name="preference_title">General Settings</string>
    <string name="pref_primary_folder">Home folder</string>
    <string name="pref_read_root">Read root</string>
    <string name="pref_show_real_path">Display real path</string>
    <string name="default_primary_folder">/mnt/sdcard</string>
    <string name="pref_primary_folder_summary">The folder that appears when the app starts, and current value is <xliff:g id="string">%1$s</xliff:g></string>
    <string name="pref_show_real_path_summary">Show real path in navigation bar</string>
    <string-array name="sort_by">
        <item>Type</item>
        <item>Name (A - Z)</item>
        <item>Size (big - small)</item>
        <item>Time (new - old)</item>
    </string-array>
    <string name="copy">Copy</string>
    <string name="create_folder">Create folder</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="paste">Paste</string>
    <string name="rename">Rename</string>
    <string name="new_folder">New folder</string>
    <string name="confirm_rename">Confirm Rename</string>
    <string name="pasting">Pasting</string>
    <string name="loading">Loading\u2026</string>
    <string name="deleting">Deleting</string>
    <string name="alert_delete_multiple">These items will be deleted.</string>
    <string name="alert_delete_single">This item will be deleted.</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="modified_time">Modified</string>
    <string name="readable">Readable</string>
    <string name="executable">Executable</string>
    <string name="writable">Writable</string>
    <string name="msg_rename_ext">You are changing the file extension, which
    may cause the file not to be recognized. Are you sure to do this?</string>
    <string name="wait">Please wait\u2026</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_all">Select All</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="show_file">Show hidden files</string>
    <string name="hide_file">Hide hidden files</string>
    <string name="selected">selected</string>
    <string name="send_file">Send file</string>
    <string name="empty_msg">(Empty Folder)</string>
    <string name="default_search_text">Please enter a search content</string>
    <string name="free_space">Available</string>
    <string name="total_space">Total space</string>
    <string name="search_files">Search Files</string>
    <string name="copy_deny">No permission to copy.</string>
    <string name="cut_deny">No permission to cut.</string>
    <string name="delete_deny">No permission to delete.</string>
    <string name="insufficient_memory">Insufficient space.</string>
    <string name="invalid_empty_name">File or folder name cannot be empty.</string>
    <string name="paste_same_folder">Cannot paste to the same directory.</string>
    <string name="invalid_char_prompt">You have input invalid character(s).</string>
    <string name="msg_unable_open_file">The file format is not supported.</string>
    <string name="search_text_empty">Search contents should not be empty.</string>
    <string name="paste_sub_folder">Cannot paste to subfolder.</string>
    <string name="operation_fail">Some file operation failed.</string>
    <string name="search_result">%2$d result(s) for \"%1$s\"</string>
    <string name="already_exists">%1$s is already in use.</string>
    <string name="path_not_exists">%1$s is not exist.</string>
    <string name="unmounted">%1$s is unmounted.</string>
    <string name="create_hidden_file">File will be hidden if its name starts with \'.\'.</string>
    <string name="modify_hidden_file">File will not be hidden if its name does not starts with \'.\'.</string>
    <string name="file_name_too_long">The input name is too long.</string>
    <string name="paste_fail">Paste failed.</string>
    <string name="delete_fail">Delete failed.</string>
    <string name="some_paste_fail">Some paste operations failed.</string>
    <string name="some_delete_fail">Some delete operations failed.</string>
    <string name="search_empty">Search content should not be empty.</string>
    <string name="search_setting_description">Local files and folders</string>
    <string name="change_mode">Select file or folder</string>
    <string name="folder_beam_forbidden_title">Can\'t beam folder</string>
    <string name="folder_beam_forbidden_message">Folder beam is not supported.Please select multiple files to beam.</string>
    <string name="drm_beam_forbidden_title">Beam forbidden</string>
    <string name="drm_beam_forbidden_message">DRM(Digital Right Management) protected files can not be beamed.</string>
    <string name="hotknot" translatable="false">"HotKnot"</string>
    <string name="view_phone_stroageinfo">Phone Information</string>
    <string name="view_tips">FOLDER</string>
    <string name="phone_folder">PHONE</string>
    <string name="mutil_selected">selected</string>
    <string name="ftp_manager">Remote Management</string>
       <string name="multi_select_title" >Selected <xliff:g id="number">%1$s</xliff:g> item(s)</string>
     <string name="storage_warning">External storage is not available or cannot be read</string>
     <string name="no_wifi">No WLAN Network</string>
     <string name="instruction_pre">Start service to enable FTP server</string>
     <string name="instruction">Enter the following address into your FTP Client:</string>
     <string name="wifi_state">WLAN Status</string>
     <string name="notif_title">FTP Server</string>
     <string name="notif_server_starting">FTP Server started</string>
     <string name="start_server">Start Service</string>
     <string name="stop_server">Stop Service</string>
     <string name="tab_remote">FTP</string>
     <string name="server_control_settings">Setting</string>
     <string name="search_history">搜索历史</string>
     <string name="add">+</string>
</resources>