<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
     <!-- 发送 -->
    <item android:id="@+id/action_send"
        android:icon="@drawable/fm_share"
        android:title="@string/operation_send" />
  
    <!-- 复制 -->
    <item android:id="@+id/action_copy"
        android:icon="@drawable/actionbar_fm_copy"
        android:title="@string/operation_copy"
        android:showAsAction="always" />
     <!-- 删除 -->
    <item android:id="@+id/action_delete"
        android:icon="@drawable/fm_delete"
        android:title="@string/operation_delete"
        android:showAsAction="always" />
    <!-- 剪切 -->
    <item android:id="@+id/action_move"
        android:icon="@drawable/actionbar_fm_cut"
        android:title="@string/operation_move" />
    <!-- 全选 -->
    <item android:id="@+id/action_select_all"
        android:icon="@drawable/fm_select_all"
        android:title="@string/operation_selectall" />
    <!-- 取消 -->
    <item android:id="@+id/action_cancel"
        android:icon="@drawable/fm_clear_select"
        android:title="@string/operation_cancel" />
      <!-- 重命名 -->
    <item
        android:id="@+id/action_rename"
        android:showAsAction="never"
        android:title="@string/rename"/>
    <!-- 详情 -->
    <item
        android:id="@+id/action_details"
        android:showAsAction="never"
        android:title="@string/details"/>
</menu>