<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- 分享 -->
    <item
        android:id="@+id/share"
        android:icon="@drawable/actionbar_fm_share"
        android:showAsAction="always"
        android:title="@string/share"/>
    <!-- hotknot分享 -->
    <item
        android:id="@+id/hotknot_share"
        android:icon="@drawable/actionbar_fm_hotknot"
        android:showAsAction="always"
        android:title="@string/hotknot"/>
    <!-- 复制-->
    <item
        android:id="@+id/copy"
        android:icon="@drawable/actionbar_fm_copy"
        android:showAsAction="always"
        android:title="@string/copy"/>
	<!-- 删除 -->    
    <item
        android:id="@+id/delete"
        android:icon="@drawable/actionbar_fm_delete"
        android:showAsAction="always"
        android:title="@string/delete"/>
    <!-- 剪切 -->
    <item
        android:id="@+id/cut"
        android:icon="@drawable/actionbar_fm_cut"
        android:showAsAction="always"
        android:title="@string/cut"/>
    <!-- 重命名 -->
    <item
        android:id="@+id/rename"
        android:showAsAction="never"
        android:title="@string/rename"/>
    <!-- 详情 -->
    <item
        android:id="@+id/details"
        android:showAsAction="never"
        android:title="@string/details"/>
    
    <item
        android:id="@+id/protection_info"
        android:showAsAction="never"/>

</menu>